fixed menu on small resolutions.

--- a/css/page1.css
+++ b/css/page1.css
@@ -175,6 +175,8 @@ max widths
 
     .navbar-header {
         float: right;
+        position:absolute;
+        right: 5px;
     }
 
     .navbar-default .navbar-header button .icon-bar {
